# simple-SysML

./: CMakeLists.txt  README
headers/: blockitem.h  blockmenu.h  dropgraphicsview.h  mainwindow.h
headers/controllers/: dropcontroller.h  menucontroller.h
headers/models/: blockmodel.h
headers/views/: blockmenuview.h  blockview.h  dropgraphicsview.h  startmenu.h
src/: blockitem.cpp  blockmenu.cpp  dropgraphicsview.cpp  main.cpp  mainwindow.cpp
src/controllers/: dropcontroller.cpp  menucontroller.cpp
src/models/: blockmodel.cpp
src/views/: blockmenuview.cpp  blockview.cpp  dropgraphicsview.cpp  startmenu.cpp
